chain_of_verification

--- a/recycle/test_phi.ipynb
+++ b/recycle/test_phi.ipynb
@@ -173,7 +173,7 @@
     "    },  \n",
     "    {\"role\": \"user\", \"content\": f\"  based on chat history: ({chat_history}) \\|\\n\\\n",
     "                                    and current question: ({question}). \\| \\\n",
-    "                                    understand the the lastest user's question or command \\\n",
+    "                                    understand the the latest user's question or command \\\n",
     "                                    and paraphrase it to make it easier understand for LLM if needed.\\\n",
     "                                    the user's intent must be in between <intent> and </intent>\\\n",
     "                                        \"},\n",
