--- a/Prompt_analysis.ipynb
+++ b/Prompt_analysis.ipynb
@@ -359,14 +359,152 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from langchain_community.llms import Ollama\n",
+    "\n",
+    "class MeetingSummaryEvaluator:\n",
+    "    def __init__(self, llm_model, meeting_details, template, max_iterations=5):\n",
+    "        self.llm = Ollama(model=llm_model)\n",
+    "        self.meeting_details = meeting_details\n",
+    "        self.template = template\n",
+    "        self.max_iterations = max_iterations\n",
+    "\n",
+    "    def generate_summary(self, prompt):\n",
+    "        prompt = f\"\"\"{prompt}\"\"\"\n",
+    "        result = self.llm.generate([prompt])\n",
+    "        summary = result.generations[0][0].text\n",
+    "        return summary\n",
+    "\n",
+    "    def generate_questions(self):\n",
+    "        prompt = f\"\"\"\n",
+    "        Based on the following meeting details, generate questions to evaluate the accuracy of the summary. The questions should be based on a meeting minutes template and should be in one of the following formats: yes/no questions, short answers, names only, or numbers only.\n",
+    "        I need 10 questions.\n",
+    "        Do not generate answers, generate questions only.\n",
+    "        \n",
+    "        Meeting Details:\n",
+    "        {self.meeting_details}\n",
+    "\n",
+    "        Questions:\n",
+    "        \"\"\"\n",
+    "        result = self.llm.generate([prompt])\n",
+    "        questions = result.generations[0][0].text.split(\"\\n\")\n",
+    "        return questions\n",
+    "\n",
+    "    def extract_answers(self, text, questions):\n",
+    "        answers = []\n",
+    "        for question in questions:\n",
+    "            prompt = f\"\"\"\n",
+    "            Based on the following summary of the meeting minutes, answer the question briefly. Use only yes/no, short answers, names, or numbers. \n",
+    "            Do not provide explanations.\n",
+    "            Do not explain the answer.\n",
+    "\n",
+    "            Summary:\n",
+    "            {text}\n",
+    "\n",
+    "            Question:\n",
+    "            {question}\n",
+    "\n",
+    "            Answer:\n",
+    "            \"\"\"\n",
+    "            result = self.llm.generate([prompt])\n",
+    "            answer = result.generations[0][0].text.strip()\n",
+    "            answers.append(answer)\n",
+    "        return answers\n",
+    "\n",
+    "    def compare_answers(self, source_answers, summary_answers):\n",
+    "        consistency_score = 0\n",
+    "        for source, summary in zip(source_answers, summary_answers):\n",
+    "            if source.lower() == summary.lower():\n",
+    "                consistency_score += 1\n",
+    "        return round(consistency_score / len(source_answers), 2)\n",
+    "\n",
+    "    def evaluate_summary_factual_consistency(self):\n",
+    "        questions = self.generate_questions()\n",
+    "\n",
+    "        best_consistency_score = 0\n",
+    "        best_summary = None\n",
+    "        best_source_answers = None\n",
+    "        best_summary_answers = None\n",
+    "\n",
+    "        iterations = 0\n",
+    "\n",
+    "        while best_consistency_score < 0.6 and iterations < self.max_iterations:\n",
+    "            summary = self.generate_summary(self.get_prompt())\n",
+    "            source_answers = self.extract_answers(self.meeting_details, questions)\n",
+    "            summary_answers = self.extract_answers(summary, questions)\n",
+    "            consistency_score = self.compare_answers(source_answers, summary_answers)\n",
+    "\n",
+    "            print(f\"Iteration {iterations + 1}, Consistency Score: {consistency_score}\")\n",
+    "\n",
+    "            if consistency_score > best_consistency_score:\n",
+    "                best_consistency_score = consistency_score\n",
+    "                best_summary = summary\n",
+    "                best_source_answers = source_answers\n",
+    "                best_summary_answers = summary_answers\n",
+    "\n",
+    "            if best_consistency_score < 0.6:\n",
+    "                prompt = self.get_prompt(questions)\n",
+    "\n",
+    "            iterations += 1\n",
+    "\n",
+    "        return {\n",
+    "            \"summary\": best_summary,\n",
+    "            \"questions\": questions,\n",
+    "            \"source_answers\": best_source_answers,\n",
+    "            \"summary_answers\": best_summary_answers,\n",
+    "            \"consistency_score\": best_consistency_score,\n",
+    "            \"iterations\": iterations\n",
+    "        }\n",
+    "\n",
+    "    def get_prompt(self, questions=None):\n",
+    "        if questions is None:\n",
+    "            return f\"\"\"\n",
+    "            I’m Meeting summary officer, please help me to summarize using the meeting minute template.\n",
+    "            We have finished the meeting:\n",
+    "\n",
+    "            {self.meeting_details}\n",
+    "\n",
+    "            Use this template:\n",
+    "\n",
+    "            {self.template}\n",
+    "\n",
+    "            Do not enter information that is not displayed.\n",
+    "            \"\"\"\n",
+    "        else:\n",
+    "            return f\"\"\"\n",
+    "            I’m Meeting summary officer, please help me to summarize using the meeting minute template.\n",
+    "            We have finished the meeting:\n",
+    "\n",
+    "            {self.meeting_details}\n",
+    "\n",
+    "            Use this template:\n",
+    "\n",
+    "            {self.template}\n",
+    "\n",
+    "            Do not enter information that is not displayed.\n",
+    "\n",
+    "            Make sure the summary can accurately answer these questions:\n",
+    "\n",
+    "            {questions}\n",
+    "            \"\"\"\n",
+    "\n",
+    "evaluator = MeetingSummaryEvaluator(\"llava\", meeting_details, template)\n",
+    "evaluation_result = evaluator.evaluate_summary_factual_consistency()\n",
+    "\n",
+    "print(evaluation_result)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    evaluator = MeetingSummaryEvaluator(\"llava\", meeting_details, template)\n",
+    "    evaluation_result = evaluator.evaluate_summary_factual_consistency()\n",
+    "    print(evaluation_result)"
+   ]
   },
   {
    "cell_type": "code",
